# my_shell

./: .gdb_history  .gitignore  .my_shellrc  CMakeLists.txt  Makefile  demo1.c  my_shell_main.c  readme.md
.gitignore/: .gitignore
include/: my_shell.h
src/: builtin_command.c  my_shell.c  parsing.c  read_command.c  read_conf.c  type_prompt.c
